[project]
name = "song-metadata-transfer-tool"
version = "1.0.0"
description = "A Streamlit application to copy and adapt song metadatas. Supports single file and batches"
authors = [
    { name = "Gabriel Favero" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["audio", "metadata", "streamlit", "music", "mp3", "flac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.28.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gabrielofavero/song-metadata-transfer-tool"
Repository = "https://github.com/gabrielofavero/song-metadata-transfer-tool"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["song-metadata-transfer-tool"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py38"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
